--- a/package.json
+++ b/package.json
@@ -5,21 +5,31 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:staging": "dotenv -e .env.staging -- next build",
+    "start:staging": "dotenv -e .env.staging -- next start",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "drizzle-orm": "^0.45.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.476.0",
     "next": "16.1.4",
+    "postgres": "^3.4.8",
+    "posthog-js": "^1.335.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
+    "resend": "^6.8.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^7.4.4",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
