--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:pdf": "tsx scripts/build-pdf.tsx",
     "build:staging": "dotenv -e .env.staging -- next build",
     "start:staging": "dotenv -e .env.staging -- next start",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
+    "@sentry/nextjs": "^10.36.0",
+    "@vercel/speed-insights": "^1.3.1",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.476.0",
@@ -33,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
